[gd_scene load_steps=8 format=2]

[ext_resource path="res://code/scenes/scenarioNews.gd" type="Script" id=1]
[ext_resource path="res://fonts/SwanseaBoldItalic-p3Dv.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/Helvetica.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sprites/section2/fearful-face_1f628.png" type="Texture" id=4]
[ext_resource path="res://audio/sfx/vineBoom.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 3 )

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="BG" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 320, 240 )
mouse_filter = 2
color = Color( 0.172549, 0.278431, 0.94902, 1 )

[node name="BGTween" type="Tween" parent="BG"]

[node name="YellowBar" type="ColorRect" parent="BG"]
margin_top = 47.0
margin_right = 640.0
margin_bottom = 99.0
color = Color( 1, 0.984314, 0, 1 )

[node name="Label" type="Label" parent="BG/YellowBar"]
margin_left = 700.0
margin_right = 1653.0
margin_bottom = 52.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "ATTENTION! YOU ARE CURRENTLY GETTING ZERO BITCHES! THIS CAN UNFORTUNATELY NOT BE FIXED. MAYBE GO LIFT SOME WEIGHTS TO SOLVE IT YOU PUSSY"
align = 1
valign = 1

[node name="Label" type="Label" parent="BG"]
margin_left = 90.0
margin_top = 140.0
margin_right = 548.0
margin_bottom = 387.0
rect_pivot_offset = Vector2( 229, 123 )
custom_colors/font_color = Color( 1, 0.964706, 0, 1 )
custom_fonts/font = SubResource( 2 )
align = 1

[node name="Emoji" type="Sprite" parent="BG"]
visible = false
position = Vector2( 318, 323 )
scale = Vector2( 0.5875, 0.5875 )
texture = ExtResource( 4 )

[node name="AudioPlayer" type="AudioStreamPlayer" parent="BG/Emoji"]
stream = ExtResource( 5 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
